--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul id="news-categories" class="navbar-nav mx-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                  <li class="nav-item mx-3">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                  
@@ -41,17 +41,8 @@
           </nav>
     </header>
     <main>
-        <div class="row row-cols-1 row-cols-md-3 g-4 container mx-auto mt-1">
-            <div class="col">
-              <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div id="news-container" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto mt-1">
+            
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/assignment.js"></script>
