--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
     </header>
     <main>
         <div id="news-container" class="row row-cols-1 row-cols-md-3 g-4 container mx-auto mt-1">
-            
+         
+    </div>
+       <section id="loader" class="d-none">
+       <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+          <div class="spinner-border text-dark" role="status">
+             <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/assignment.js"></script>
