--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
               <a class="navbar-brand" href="#"><Strong>NEWS</Strong><span>360</span></a>
                 <ul class="navbar-nav d-sm-flex ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">News</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">News</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                   </li>
                 </ul>
             </div>
